followup refactor